@@ -8,7 +8,7 @@
  * @copyright 2011 Simple Machines
  * @license http://www.simplemachines.org/about/smf/license.php BSD
  *
- * @version 2.0.8
+ * @version 2.0.11
  */
 
 if (!defined('SMF'))
@@ -219,6 +219,9 @@ if (!defined('SMF'))
 	void remove_integration_function(string hook, string function)
 		- removes the given function from the given hook.
 		- does nothing if the functions is not available.
+
+	array safe_unserialize(string data)
+		- sanitizes input before unserializing string.
 */
 
 // Update some basic statistics...
@@ -4411,5 +4414,13 @@ function fix_redirect_path__preg_callback($matches)
 function return_chr__preg_callback($matches)
 {
 	return chr($matches[1]);
+}
+
+function safe_unserialize($data)
+{
+	// There's no reason input should contain an object,
+	// user is up to no good...
+	if (preg_match('/(^|;|{|})O:([0-9]|\+|\-)+/', $data) === 0)
+		return @unserialize($data);
 }
 ?>
